src/components/ui/Input/index.module.scss
@import '@/utils/palette.scss';

.container {
  display: flex;
  position: relative;
  align-items: center;
  width: 100%;

  & > div > svg {
    color: $primary-800;
  }
}

.input {
  width: 100%;
  border: 1px solid $primary-border;
  border-radius: 0.375rem;
  color: $primary-800;
  transition: background-color 0.2s, opacity 0.2s;
  background-color: $gray-025;

  &:hover {
    background-color: $primary-050;
    opacity: 0.98;
  }

  &:focus {
    outline: none;
    box-shadow: none;
  }
}

.label {
  position: absolute;
  cursor: text;
  user-select: none;
  padding: 0 0.25rem;
  top: 0.2rem;
  left: 0.2rem;
  color: $gray-400;
  font-size: 0.75rem;
}

.xs {
  font-size: var(--font-size-xs);
  padding: var(--padding-xs);
}
.sm {
  font-size: var(--font-size-sm);
  padding: var(--padding-sm);
}
.md {
  font-size: var(--font-size-md);
  padding: var(--padding-md);
}
.lg {
  font-size: var(--font-size-lg);
  padding: var(--padding-lg);
}
.xl {
  font-size: var(--font-size-xl);
  padding: var(--padding-xl);
}

.number {
  text-align: right;
}

